# mix-functors

./: README.md  mix-functors.cabal  mixfix.cabal
exe/: Main.hs
src/Data/Functor/: Mix.hs  Mixfix.hs
