cabal-version:      3.0
name:               mixfix
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Nicolas Audinet de Pieuchon
maintainer:         nic.audinet27@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
      Data.Functor.Mixfix
    build-depends:
      base ^>=4.17.2.1

executable mixfix
    import: warnings
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.1
      , mixfix
      , MonadRandom
    hs-source-dirs: exe
